[package]
name = "get_xrates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
tokio = { version = "1.19.0", features = ["full"] }
serde_json = "1.0.81"